# fancoin

./: Anchor.toml  anchor  anchortoggle.sh  fancoin.json  package-lock.json  tracker-gg-leaderboard.html
programs/fancoin/: Cargo.toml
programs/fancoin/src/: lib.bak  lib.bak2  lib.rs  lib10.rs  lib11.rs  lib12.rs  lib13.rs  lib15.rs  lib16.rs  lib17.rs  lib18.rs  lib19.rs  lib2.rs  lib20.rs  lib3.rs  lib4.rs  lib5.rs  lib6.rs  lib7.rs  lib8.rs  lib9.rs  play-and-earn-lib.rs
scripts/: 0_pay_other_wallet_from_localwallet.py  10_val1_claim.py  11_val2_claim.py  12_PUBG_val1_player_scrape_and_val_mvp.py  14_main_validator_register_players.py  15_process_paid_players.py  16_pay_pubg_keys_users.py  17_PUBG_mass_claim.py  18_display_token_balances.py  1_val1_init.py  2_punch_in.py  2_scraper5.py  3_test_fancoin.py  3_val1_init.py  3_val1_player_scrape_and_post_mvp.py  4_bulk_register_players.py  4_test_fancoin_2.py  4_val1_claim.py  4_val2_init.py  5_bulk_register_players_with_airdrop2.py  5_mass_signup.py  6_punch_in.py  6_val_player_scrape_and_post_dbg.py  7_punch_in2.py  8_val1_player_scrape_and_post_mvp.py  9_val2_player_scrape_and_post_mvp.py  _3_test_fancoin.py  _3_val1_init.py  _4_init_val2.py  _4_test_fancoin_2.py  _5_bulk_register_players_with_airdrop2.py  _7_val_player_scrape_and_post_dbg2.py  accountinit.js  bulk_register_players.py  dapp_pda.txt  debug_game_num_check.py  debug_player_list_check.py  game_pda.txt  id-old-2.json  id.json  (+29 more)
tests/: fancoin.ts
tracker-gg-leaderboard_files/: 0WHmiG-o.css  B-yJvZIU.css  BE6iYLV8.css  BVQBnjli.css  BXjwRlQZ.css  (+19 more)
(+1112 files in other folders)
